Fix invisible logo on hover

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -15,6 +15,9 @@ header {
     color: #fff;
     font-size: 1.7rem;
     font-weight: 500;
+    &:hover {
+      color: #fff;
+    }
   }
 }
 
